--- a/buscadorGithub/package.json
+++ b/buscadorGithub/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "deploy": "npm run lint && npm run test && ng build --prod",
-    "test": "ng test --watch=false",
+    "test": "ng test --watch=false --browsers=ChromeHeadless",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
