--- a/buscadorGithub/package.json
+++ b/buscadorGithub/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.2.14",
     "hammerjs": "^2.0.8",
     "phantomjs": "^2.1.7",
+    "karma-phantomjs-launcher": "^1.0.4",
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
